attempts to fix padding at bottom of page on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,8 +157,7 @@ code {
 }
 
 .page-footer {
-  padding: 0 40px;
-  margin-bottom: 50px;
+  padding: 0 40px 60px;
 }
 
 .page-footer.footer-alt {
